# insa-4ir-ai-lab3-template

./: .gitignore  Cargo.toml  README.md  config.yaml
src/: agent_bin.rs  args.rs  bench.rs  board.rs  engine.rs  main.rs  mcts.rs  minimax.rs
