[package]
name = "checkers"
version = "0.1.0"
edition = "2021"


[dependencies]
# eframe = { version = "*", features = [
#     "default",
#     "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
# ] }
# log = "0.4"
# env_logger = "0.11"
static_assertions = "1.1.0"
arrayvec = "0.7.6"
smallvec = { version = "1.14.0", features = ["union"] }
itertools = "*"
rand = "*"
hashbrown = "*"
clap = { version = "4.5.46", features = ["derive"] }
anyhow = "1.0.99"
ai-tournament = { git = "https://github.com/Atsuyo64/ai-tournament", tag = "v3.0.1" }

[profile.release]
debug = true

[[bin]]
name = "eval"
path = "src/agent_bin.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"
